# async-sink

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  logger.cpp  logger.hpp  logger_demo  logger_test  main.cpp  test_logger  time_utils.cpp
.github/workflows/: ci.yml  release.yml
examples/: demo.cpp
include/: logger.hpp
include/logger/: formatter.hpp  level.hpp  log_message.hpp  logger.hpp  macros.hpp  sink.hpp  time_utils.hpp
include/logger/detail/: mpmc_bounded_queue.hpp
include/logger/formatters/: json_formatter.hpp  pattern_formatter.hpp
include/logger/sinks/: console_sink.hpp  daily_file_sink.hpp  file_sink.hpp  null_sink.hpp  ring_buffer_sink.hpp  rotating_file_sink.hpp
tests/: test_logger.cpp
